[package]
name = "advancer"
version = "0.0.1"
edition = "2021"
authors = ["Brett Etter <brett@staratlas.com>"]
description = "Helper for advancing over mutable slices"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.3"