[package]
name = "advancer"
version = "0.1.0"
edition = "2021"
authors = ["Brett Etter <brett@staratlas.com>"]
repository = "https://github.com/staratlasmeta/advancer"
description = "Helper for advancing over mutable slices"
license = "Apache-2.0"

[dependencies]
thiserror = { version = "2.0.16", default-features = false }
